--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,28 @@
 {"image":"mcr.microsoft.com/devcontainers/universal:2",
 "forwardPorts": [
     // ASP.NET Core Web/API App   
-    7001
-  ]
+    7001,7002
+],
+"customizations": {
+	"vscode": {
+		"extensions": [
+			"bradlc.vscode-tailwindcss",
+			"ckolkman.vscode-postgres",
+			"dsznajder.es7-react-js-snippets",
+			"formulahendry.auto-close-tag",
+			"github.vscode-github-actions",
+			"mongodb.mongodb-vscode",
+			"ms-azuretools.vscode-docker",
+			"ms-dotnettools.csdevkit",
+			"ms-dotnettools.csharp",
+			"ms-dotnettools.vscode-dotnet-runtime",
+			"ms-dotnettools.vscodeintellicode-csharp",
+			"ms-kubernetes-tools.vscode-kubernetes-tools",
+			"patcx.vscode-nuget-gallery",
+			"PKief.material-icon-theme",
+			"redhat.vscode-yaml",
+			"zxh404.vscode-proto3"
+		]
+	}
+}
 }
