--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,15 +13,16 @@
 			"github.vscode-github-actions",
 			"mongodb.mongodb-vscode",
 			"ms-azuretools.vscode-docker",
-			"ms-dotnettools.csdevkit",
 			"ms-dotnettools.csharp",
+			"ms-dotnettools.csdevkit",
 			"ms-dotnettools.vscode-dotnet-runtime",
 			"ms-dotnettools.vscodeintellicode-csharp",
 			"ms-kubernetes-tools.vscode-kubernetes-tools",
 			"patcx.vscode-nuget-gallery",
 			"PKief.material-icon-theme",
 			"redhat.vscode-yaml",
-			"zxh404.vscode-proto3"
+			"zxh404.vscode-proto3",
+			"vscode-icons-team.vscode-icons"
 		]
 	}
 }
