--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - pgdata:/var/lib/postresql/data
+    - /var/lib/postresql/data
+      # - pgdata:/var/lib/postresql/data
   mongodb:
     image: mongo:6-jammy
     environment:
@@ -15,7 +16,8 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - mongodata:/var/lib/mongodb/data
-volumes:
-  pgdata:
-  mongodata:
+      - /var/lib/mongodb/data
+      # - mongodata:/var/lib/mongodb/data
+# volumes:
+#   pgdata:
+#   mongodata:
