Chapter-43 search return 0 after re-start mongodb

--- a/src/SearchService/appsettings.Development.json
+++ b/src/SearchService/appsettings.Development.json
@@ -8,5 +8,5 @@
   "ConnectionStrings": {
     "MongoDbConnection":"mongodb://root:mongopw@localhost"
   },
-  "AuctionServiceUrl": "http://localhost:7001"
+  "AuctionServiceUrl":"https://literate-space-engine-6j7v5qqrpwqfg46-7001.preview.app.github.dev"
 }
